# garrettleber.com

./: .gitignore  .gitmodules  README.md  flake.nix
.github/workflows/: aws-upload.yml  build-deploy.yml  deploy-site.yml  gcp-upload.yml  test.yml
content/: counter.js  index.html
infra/: .terraform.lock.hcl  backend.tf  locals.tf  main.tf  outputs.tf  visitors_app.tf
infra/src/: main.py  test_main.py
scripts/: build-site.sh  new-post.sh
site/: config.yaml  freeze.py  pyproject.toml
site/app/: __init__.py  content.py  routes.py
site/app/static/css/: kanagawa.css
site/app/templates/: base.html  blog_list.html  blog_post.html  home.html
site/archetypes/: default.md
site/content/blogs/: dactyl-cc-build.md  ergo-keyboards-are-fun.md  hugo-static-site.md  talos-cluster.md
site/layouts/_default/: single.html
site/layouts/partials/: head.html
site/layouts/partials/sections/footer/: copyright.html
site/posts/: ergo-keyboards-are-fun.md  gtnh-lv-mv.md  hugo-static-site.md  nix-flakes.md  talos-cluster.md
